fix: grid bug that caused header at home page to expand when comment feed grew too large

--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -1,5 +1,4 @@
 .header {
-    grid-area: 1 / 1 / 2 / 9;
     background-color: #FFFFFF;
     box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.5);
     display: flex;
