--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -3,7 +3,7 @@
     min-width: 100vw;
     display: grid;
     grid-template-columns: repeat(8, 1fr);
-    grid-template-rows: 0.05fr 0.1fr 1fr;
+    grid-template-rows: 0.1fr 1fr;
     grid-column-gap: 0px;
     grid-row-gap: 10px;
 }
